--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -108,6 +108,24 @@
   margin: auto;
 }
 
-.chatholder{
+.chatholder {
   justify-content: flex-start;
+}
+
+
+.online {
+  height: 10px;
+  width: 10px;
+  background-color: green;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+
+.offline {
+  height: 10px;
+  width: 10px;
+  background: red;
+  border-radius: 50%;
+  display: inline-block;
 }
