read status issue fixed

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -118,7 +118,7 @@
 
               <span class="time">
                 <ng-container *ngIf="chat.readCount && chat.from == currentUserName">
-                  'Read'
+                   Read
                   <br />
                 </ng-container>
                 <span> {{chat.date | date:"shortTime"}} </span>
