--- a/src/app/shared/app-material/app-material.scss
+++ b/src/app/shared/app-material/app-material.scss
@@ -1,11 +1,11 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 
-@include mat-core();
+@include mat.core();
 
-$app-primary: mat-palette($mat-indigo);
-$app-accent:  mat-palette($mat-pink, A200, A100, A400);
+$app-primary: mat.define-palette(mat.$indigo-palette);
+$app-accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
-$app-theme: mat-light-theme($app-primary, $app-accent);
+$app-theme: mat.define-light-theme($app-primary, $app-accent);
 
 @mixin mix-app-theme($app-theme) {
   $primary: map-get($app-theme, primary);
