--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -138,7 +138,7 @@
 
               <span class="time">
                 <ng-container *ngIf="chat.readCount && chat.from == currentUserName">
-                   Read
+                   Read {{chat.readCount}}
                   <br />
                 </ng-container>
                 <span> {{chat.date | date:"shortTime"}} </span>
